--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "npm": "^9.6.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.8.0",
     "styled-components": "^5.3.1"
   },
   "devDependencies": {
