--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-currency-input-field": "^3.6.10",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
+    "react-router-dom": "^6.11.1",
     "styled-components": "^5.3.1"
   },
   "devDependencies": {
