--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.11.1",
+    "react-toastify": "^9.1.3",
     "styled-components": "^5.3.1"
   },
   "devDependencies": {
