--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-currency-input-field": "^3.6.10",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
+    "react-input-mask": "^2.0.4",
     "react-router-dom": "^6.11.1",
     "react-slick": "^0.29.0",
     "react-toastify": "^9.1.3",
